fix rigt alignment

--- a/src/assets/scss/6-components/_overlay.scss
+++ b/src/assets/scss/6-components/_overlay.scss
@@ -36,7 +36,7 @@
 
 .overlay__theme {
 	font-size: 11px;
-	justify-content: right;
+	justify-content: flex-end;
 }
 
 .overlay__themeswitch {
